# file-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  agent.md  docker-compose.yml  pytest.ini  requirements-graph.txt  requirements.txt
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260625_0001_create_runtime_tables.py  20260625_0002_add_auth_default_workspace.py  20260625_0003_add_documents_file_objects.py  20260625_0004_expand_tool_reference_ids.py  20260625_0005_lock_documents_after_message.py  20260625_0006_add_ingest_status_and_insights.py  20260625_0007_add_document_extraction_tables.py  20260625_0008_create_classification_suggestion_tables.py  20260625_0009_create_changeset_tables.py  20260625_0010_create_operation_plan_tables.py  20260707_0001_create_managed_files_tables.py  20260707_0002_add_managed_root_classification_mode.py  20260711_0001_hash_managed_file_fingerprints.py  20260711_0002_harden_managed_file_long_paths.py  20260713_0001_create_managed_file_snapshots.py  20260713_0002_create_document_elements.py  20260714_0001_create_file_rename_review_items.py  20260715_0001_add_graph_classification_v2.py  20260716_0001_create_file_rename_batches.py  20260720_0001_create_document_artifacts.py  20260721_0001_create_three_tier_file_lifecycle.py  20260721_0002_create_document_summary_tables.py  20260722_0001_add_upload_risk_assessment.py  20260723_0001_create_document_chunk_indexes.py  20260724_0001_create_document_search_profiles.py  20260724_0002_finalize_document_search_profiles.py  20260724_0003_create_shared_working_workspace.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  logging.py  security.py
apps/api/app/db/: base.py  models.py
apps/api/app/scripts/: __init__.py  (+1 more)
(+341 files in other folders)
