[project]
name = "file-agent-api"
version = "0.1.0"
description = "FastAPI and LangGraph runtime for File Agent."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.28.0",
  "langgraph>=0.6.0",
  "pydantic>=2.13.0",
  "SQLAlchemy>=2.0,<2.1",
  "uvicorn>=0.39.0",
  "python-multipart>=0.0.20",
  "PyMuPDF>=1.24.0",
  "openpyxl>=3.1.0",
  "Pillow>=10.0.0",
  "paddlepaddle>=2.6.0",
  "paddleocr>=2.7.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
test = [
  "alembic>=1.13,<2.0",
  "pytest>=8.4.0",
  "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
