[project]
name = "file-agent-api"
version = "0.1.0"
description = "FastAPI and LangGraph runtime for File Agent."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.28.0",
  "langgraph>=0.6.0",
  "pydantic>=2.13.0",
  "SQLAlchemy>=2.0,<2.1",
  "uvicorn>=0.39.0",
  "python-multipart>=0.0.20",
  "PyMuPDF>=1.24.0",
  "openpyxl>=3.1.0",
  "Pillow>=10.0.0",
  "paddlepaddle>=2.6.0",
  "paddleocr>=2.7.0",
  "python-docx>=1.1.0",
  "docling>=2.50,<3.0",
  "jieba>=0.42.1,<0.43",
]

[project.optional-dependencies]
test = [
  "alembic>=1.13,<2.0",
  "pytest>=8.4.0",
  "psycopg2-binary>=2.9.0",
]
graph = [
  "neo4j>=5,<7",
  "neo4j-graphrag>=1,<2",
  "sentence-transformers>=3,<6",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = [
  "app.tests*",
  "alembic*",
  "logs*",
  "storage*",
]
